Bug 320863 - nepomuk feeder crashing
Summary: nepomuk feeder crashing
Status: RESOLVED FIXED
Alias: None
Product: Akonadi
Classification: Frameworks and Libraries
Component: Nepomuk Feeder Agents (other bugs)
Version First Reported In: GIT (master)
Platform: Ubuntu Linux
: NOR crash
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords: drkonqi, release_blocker
Depends on:
Blocks:
 
Reported: 2013-06-07 14:50 UTC by Blackpaw
Modified: 2013-06-13 13:39 UTC (History)
5 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Blackpaw 2013-06-07 14:50:45 UTC
Application: akonadi_nepomuk_feeder (4.10)
KDE Platform Version: 4.10.4
Qt Version: 4.8.4
Operating System: Linux 3.8.0-23-generic x86_64
Distribution: Ubuntu 13.04

-- Information about the crash:
- What I was doing when the application crashed:

I enabled email indexing and was letting was letting the feeder index as normal (idle detection disabled). very soon in the process it would crash. I restarted if a few times using akonadiconsole and it allways crashed again.

Here is the output in .xsession-errors that occured when it crashed.

akonadi_nepomuk_feeder(3882) ItemQueue::fetchJobResult: Not all items were fetched:  0 5 
96643  no payload 
96641  no payload 
96639  no payload 
96638  no payload 
96637  no payload 
96635  no payload 
96631  no payload 
96586  no payload 
96585  no payload 
akonadi_nepomuk_feeder(3882) ItemQueue::fetchJobResult: Not all items were fetched:  91 100 
ASSERT: "mappings.contains(it.value())" in file /home/lindsay/Projects/akonadi/kdepim-runtime/agents/nepomukfeeder/prope
rtycache.cpp, line 167
KCrash: Application 'akonadi_nepomuk_feeder' crashing...
KCrash: Attempting to start /usr/lib/kde4/libexec/drkonqi from kdeinit
void Akonadi::NotificationSource::serviceUnregistered(const QString&) Notification source "akonadi_nepomuk_feeder" now s
erving: () 
void Akonadi::NotificationSource::unsubscribe() "akonadi_nepomuk_feeder"

The crash can be reproduced every time.

-- Backtrace:
Application: Akonadi Nepomuk Feeder (akonadi_nepomuk_feeder), signal: Aborted
Using host libthread_db library "/lib/x86_64-linux-gnu/libthread_db.so.1".
[KCrash Handler]
#5  0x00007f670335b037 in raise () from /lib/x86_64-linux-gnu/libc.so.6
#6  0x00007f670335e698 in abort () from /lib/x86_64-linux-gnu/libc.so.6
#7  0x00007f67053b05c2 in qt_message_output (msgType=msgType@entry=QtFatalMsg, buf=0x1038e98 "ASSERT: \"mappings.contains(it.value())\" in file /home/lindsay/Projects/akonadi/kdepim-runtime/agents/nepomukfeeder/propertycache.cpp, line 167") at global/qglobal.cpp:2347
#8  0x00007f67053b0938 in qt_message(QtMsgType, const char *, typedef __va_list_tag __va_list_tag *) (msgType=msgType@entry=QtFatalMsg, msg=msg@entry=0x7f670551a548 "ASSERT: \"%s\" in file %s, line %d", ap=ap@entry=0x7fff1001a648) at global/qglobal.cpp:2393
#9  0x00007f67053b0ac4 in qFatal (msg=msg@entry=0x7f670551a548 "ASSERT: \"%s\" in file %s, line %d") at global/qglobal.cpp:2576
#10 0x00007f67053b0b06 in qt_assert (assertion=assertion@entry=0x426e77 "mappings.contains(it.value())", file=file@entry=0x426df0 "/home/lindsay/Projects/akonadi/kdepim-runtime/agents/nepomukfeeder/propertycache.cpp", line=line@entry=167) at global/qglobal.cpp:2021
#11 0x000000000041c240 in PropertyCache::fillCache (this=this@entry=0xb02288, graph=..., mappings=...) at /home/lindsay/Projects/akonadi/kdepim-runtime/agents/nepomukfeeder/propertycache.cpp:167
#12 0x0000000000415a47 in ItemQueue::batchJobResult (this=0xb02258, job=0xc49b70) at /home/lindsay/Projects/akonadi/kdepim-runtime/agents/nepomukfeeder/itemqueue.cpp:235
#13 0x00007f67054cc0ef in QMetaObject::activate (sender=0xc49b70, m=<optimized out>, local_signal_index=<optimized out>, argv=0x7fff1001a9c0) at kernel/qobject.cpp:3539
#14 0x00007f6705db14e2 in KJob::result(KJob*) () from /usr/lib/libkdecore.so.5
#15 0x00007f6705db1520 in KJob::emitResult() () from /usr/lib/libkdecore.so.5
#16 0x00007f6704e526b3 in Nepomuk2::StoreResourcesJob::Private::_k_slotDBusCallFinished (this=0x111e540, watcher=0xf505f0) at /home/lindsay/Projects/akonadi/nepomuk-core/libnepomukcore/datamanagement/storeresourcesjob.cpp:101
#17 0x00007f67054cc0ef in QMetaObject::activate (sender=0xf505f0, m=m@entry=0x7f670533d5c0 <QDBusPendingCallWatcher::staticMetaObject>, local_signal_index=local_signal_index@entry=0, argv=argv@entry=0x7fff1001abd0) at kernel/qobject.cpp:3539
#18 0x00007f67051203ef in QDBusPendingCallWatcher::finished (this=<optimized out>, _t1=0xf505f0) at .moc/release-shared/moc_qdbuspendingcall.cpp:106
#19 0x00007f67054d15be in QObject::event (this=0xf505f0, e=<optimized out>) at kernel/qobject.cpp:1194
#20 0x00007f6703dd08ec in QApplicationPrivate::notify_helper (this=this@entry=0x9a6fe0, receiver=receiver@entry=0xf505f0, e=e@entry=0xd73900) at kernel/qapplication.cpp:4567
#21 0x00007f6703dd325b in QApplication::notify (this=0x7fff1001b550, receiver=0xf505f0, e=0xd73900) at kernel/qapplication.cpp:4428
#22 0x00007f6706377af6 in KApplication::notify(QObject*, QEvent*) () from /usr/lib/libkdeui.so.5
#23 0x00007f67054b763e in QCoreApplication::notifyInternal (this=0x7fff1001b550, receiver=receiver@entry=0xf505f0, event=event@entry=0xd73900) at kernel/qcoreapplication.cpp:946
#24 0x00007f67054bb171 in sendEvent (event=0xd73900, receiver=0xf505f0) at ../../include/QtCore/../../src/corelib/kernel/qcoreapplication.h:231
#25 QCoreApplicationPrivate::sendPostedEvents (receiver=receiver@entry=0x0, event_type=event_type@entry=0, data=0x968e80) at kernel/qcoreapplication.cpp:1570
#26 0x00007f67054bb4a3 in QCoreApplication::sendPostedEvents (receiver=receiver@entry=0x0, event_type=event_type@entry=0) at kernel/qcoreapplication.cpp:1463
#27 0x00007f67054e5e83 in sendPostedEvents () at ../../include/QtCore/../../src/corelib/kernel/qcoreapplication.h:236
#28 postEventSourceDispatch (s=0x9a72e0) at kernel/qeventdispatcher_glib.cpp:279
#29 0x00007f66fffaef05 in g_main_context_dispatch () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#30 0x00007f66fffaf248 in ?? () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#31 0x00007f66fffaf304 in g_main_context_iteration () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#32 0x00007f67054e6016 in QEventDispatcherGlib::processEvents (this=0x96a7e0, flags=...) at kernel/qeventdispatcher_glib.cpp:424
#33 0x00007f6703e761ae in QGuiEventDispatcherGlib::processEvents (this=<optimized out>, flags=...) at kernel/qguieventdispatcher_glib.cpp:204
#34 0x00007f67054b638f in QEventLoop::processEvents (this=this@entry=0x7fff1001b4d0, flags=...) at kernel/qeventloop.cpp:149
#35 0x00007f67054b6618 in QEventLoop::exec (this=this@entry=0x7fff1001b4d0, flags=...) at kernel/qeventloop.cpp:204
#36 0x00007f67054bbcf6 in QCoreApplication::exec () at kernel/qcoreapplication.cpp:1218
#37 0x00007f6703dceffc in QApplication::exec () at kernel/qapplication.cpp:3828
#38 0x00007f67058a7765 in Akonadi::AgentBase::init (r=r@entry=0xb02100) at /home/lindsay/Projects/akonadi/kdepimlibs/akonadi/agentbase.cpp:706
#39 0x000000000040fea8 in Akonadi::AgentBase::init<Akonadi::NepomukFeederAgent> (argc=<optimized out>, argv=<optimized out>) at /usr/include/akonadi/agentbase.h:407
#40 0x00007f6703345ea5 in __libc_start_main () from /lib/x86_64-linux-gnu/libc.so.6
#41 0x000000000040c4f1 in _start ()

Reported using DrKonqi
Comment 1 Blackpaw 2013-06-07 23:48:49 UTC
Forgot to mention, built from master:
shared-desktop-ontologies
nepomuk-core
nepomuk-widgets
libkgapi
kactivities
akonadi
kdepimlibs
kdepim-runtime
 kdepim
Comment 2 Christophe Marin 2013-06-08 20:14:48 UTC
Confirmed in master
Comment 3 Allen Winter 2013-06-08 22:16:32 UTC
yep.
I have 8 core dumps from akonadi_nepomuk_feeder in the past several hours.

all of them the same assert in propertycache
Comment 4 Vishesh Handa 2013-06-10 10:22:48 UTC
Confirmed. Happens to me as well. I'll try to fix it.
Comment 5 Laurent Montel 2013-06-11 17:21:00 UTC
it's right we can't release 4.11beta1 will this crash.
I disabled it on my computer for the moment.
Comment 6 Vishesh Handa 2013-06-11 18:44:42 UTC
I'll fix it first thing tomorrow for sure.
Comment 7 Vishesh Handa 2013-06-12 18:39:03 UTC
Git commit 960c24758b24813080733a73aa669931934f3198 by Vishesh Handa.
Committed on 12/06/2013 at 17:10.
Pushed by vhanda into branch 'master'.

Feeder: Do not assert when the mappings do not contain a resource

There are cases where the mappings do not contain a resoucce. This is
becase we use the MergeDuplicateResources flag in StoreResources and
the duplicates do not have mappings

M  +6    -2    agents/nepomukfeeder/propertycache.cpp

http://commits.kde.org/kdepim-runtime/960c24758b24813080733a73aa669931934f3198
Comment 8 Blackpaw 2013-06-12 20:54:30 UTC
Is working for me, no crahing, indexing is happening again.

Thanks Vishesh.
Comment 9 Laurent Montel 2013-06-13 13:39:30 UTC
Works for me too.
thanks