Feeder: Do not assert when the mappings do not contain a resource

There are cases where the mappings do not contain a resoucce. This is
becase we use the MergeDuplicateResources flag in StoreResources and
the duplicates do not have mappings

BUG: 320863